kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kustomize-demo-api
spec:
  selector:
    matchLabels:
      app: kustomize-demo-api
  template:
    metadata:
      labels:
        app: kustomize-demo-api
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - kustomize-demo-api
              topologyKey: kubernetes.io/hostname
            weight: 2
      containers:
        - name: kustomize-demo-api
          image: replicated-kustomize-demo-api
          imagePullPolicy: IfNotPresent
          workingDir: /go/src/github.com/replicatedcom/kustomize-demo-api
          ports:
            - name: kustomize
              containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: kustomize
              scheme: HTTP
            initialDelaySeconds: 2
            periodSeconds: 2
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 2
            httpGet:
              path: /livez
              port: kustomize
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 1
