kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kustomize-demo-api
  labels:
    app: kustomize-demo-api
  namespace: kustomize-demo-api
spec:
  type: NodePort
  ports:
  - name: kustomize-demo-api
    port: 3000
    targetPort: kustomize
    nodePort: 30110
  selector:
    app: kustomize-demo-api
