kustomize/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: no-service-egress-policy
  namespace: kustomize-demo-api
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: "0.0.0.0/0"
        except:
        - "10.0.0.0/8"
